# ClusterNews

./: .gitignore  auth.py  config.json  config_manager.py  main.py  news_processor.py  pyproject.toml
gui/: loading_view.py  login_dialog.py  main_window.py  settings_dialog.py
