[tool.poetry]
package-mode = false

[project]
name = "clusternews"
version = "0.1.0"
description = "Проект по кластеризации новостей с Reddit"
authors = [
    {name = "Tairkhan"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "pyqt5 (>=5.15.11,<6.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "hdbscan (>=0.8.40,<0.9.0)",
    "keybert (>=0.9.0,<0.10.0)",
    "auth (>=0.5.3,<0.6.0)",
    "requests (>=2.32.3,<3.0.0)",
    "bytesbufio (>=1.0.3,<2.0.0)",
    "praw (>=7.8.1,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
